[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nqch-quantum"
version = "0.1.1"
description = "NQCH Quantum Computing Cloud Client"
authors = ["NQCH"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://nqch.qibo.science/"
repository = "https://github.com/nqch-quantum/nqch-quantum/"
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
packages = [{ include = "nqch_quantum", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
qibo-client = "^0.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
responses = "^0.25.3"

[tool.poe.tasks]
test = "pytest"
lint = "pylint --errors-only src"
lint-warnings = "pylint --exit-zero src"

[tool.pylint.reports]
output-format = "colorized"

[tool.pytest.ini_options]
testpaths = ['tests/']
filterwarnings = ['ignore::RuntimeWarning']
addopts = ['--cov=src/nqch_quantum', '--cov-report=xml', '--cov-report=html']
